--- a/cytoatlas-api/pyproject.toml
+++ b/cytoatlas-api/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "scipy>=1.12.0",
     "anndata>=0.10.0",
     "h5py>=3.10.0",
+    "pyarrow>=15.0.0",
 
     # Utilities
     "httpx>=0.26.0",
@@ -76,6 +77,8 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.8.0",
     "pre-commit>=3.6.0",
+    "pip-audit>=2.7.0",
+    "bandit>=1.7.0",
 ]
 
 [project.scripts]
